[gd_scene load_steps=2 format=3 uid="uid://cr4t5s6u7v8w9"]

[ext_resource type="Script" path="res://scripts/ui/pet/pet_status_widget.gd" id="1"]

[node name="PetStatusWidget" type="Control"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Portrait" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="NameLevelLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Pet Name Lv.1"

[node name="AffectionLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "‚ô•‚ô•‚ô•‚ô°‚ô°"

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Resting"

[node name="ViewButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "üëÅ View"